<resources>
    <string name="app_name">StudyTogetherProject</string>
    <string name="title_activity_main">MainActivity</string>

    <!--Changes-->
    <string name="subject_change">Subject</string>
    <string name="name_change">Name</string>
    <string name="date_change">Birthday</string>
    <string name="phone_change">Phone number</string>
    <string name="description_change">Description</string>
    <string name="save_btn_change">Save</string>
    <string name="saving">Profile changed correctly!</string>
    <!--Chat-->
    <string name="edit_message">Write a message</string>
    <string name="price">Price:</string>
    <string name="last_day">Term:</string>
    <string name="description">Description:</string>
    <string name="finish_task_btn">Finish!</string>
    <string name="grade_up">grade ↑</string>
    <string name="grade_down">grade ↓</string>
    <!--Choose-->
    <string name="working_nice_or_">Evaluate the work of an expert:</string>
    <string name="type">Write...</string>
    <string name="done">Done</string>
    <!--ChooseGender-->
    <string name="choose_gender">Choose the character:</string>
    <string name="loading_gender">Loading...</string>
    <!--Comment-->
    <string name="comment">Comments</string>
    <!--CreateTask-->
    <string name="add_task">Adding a task</string>
    <string name="for_task_description">You need points to publish the task, in order to get them, complete the tasks of other people!You need points to publish the task, in order to get them, complete the tasks of other people!</string>
    <string name="name_of_task_creator">Job name</string>
    <string name="grade">Grade</string>
    <string name="next">Next→</string>
    <string name="back">←Back</string>
    <string name="add_photo">Add photo!</string>
    <string name="description_of_task_creator">Task description...</string>
    <string name="price_creator">Price</string>
    <string name="date_creator">Term</string>
    <string name="delete_img">You have deleted the picture.</string>
    <string name="no_money">You do not have enough points to post the assignment.</string>
    <string name="published">Published!</string>
    <string name="enter_all_info">Enter all the information in the paragraphs to publish the assignment.</string>
    <string name="price_should">The price for the rear must be no less than 100 and no more than 500 points.</string>
    <!--Detail-->
    <string name="specilisation_detail">Specialization:</string>
    <string name="description_of_profile_detail">Profile description:</string>
    <!--ForgetPassword-->
    <string name="forget_the_pass">Forgot password?</string>
    <string name="type_email">Enter your email below to restore password</string>
    <string name="email">E-mail</string>
    <string name="refresh">Restore</string>
    <string name="try_again">Try again later!</string>
    <string name="success_letter">A letter with a password change has been sent to your mail!</string>
    <!--Image-->
    <string name="image">Image</string>
    <!--OnBoarding-->
    <string name="continue_onboarding">Skip</string>
    <string name="start">Start</string>
    <string name="next_onboarding">Next</string>
    <!--DialogFirstTask-->
    <string name="congratulations_first">Congratulations on publishing your first assignment!</string>
    <string name="nice">Nice</string>
    <string name="gained">You will be credited with 100 points.</string>
    <!--ExitOrNot-->
    <string name="exit">Exit</string>
    <string name="are_u_sure">Are you sure you want to log out of your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!--Filter-->
    <string name="get_good_price">-Choose your desired price:</string>
    <string name="choose_the_class">Choose a grade</string>
    <!--AllChats-->
    <string name="chats">Chats</string>
    <string name="find_task">Find a task...</string>
    <string name="my_chats">You have no chats yet!</string>
    <!--AllTasks-->
    <string name="main_tasks">There are no tasks here yet!</string>
    <!--Dashboard-->
    <string name="tasks">Tasks</string>
    <string name="all_tasks">All tasks</string>
    <string name="my_tasks">My tasks</string>
    <!--Profile-->
    <string name="subject_profile">Specialization:</string>
    <string name="dateOfBirth">Birthday:</string>
    <string name="phone">Phone number:</string>
    <string name="exit_profile">←Exit</string>
    <string name="rewrite">Edit</string>
    <string name="profile_promise">When completing the assignment, please do not log out of your account!</string>
    <!--Login-->
    <string name="enter_to_acc_or_create">Sign in to your account or create a new one to post or complete the assignment!</string>
    <string name="enterBtn">Enter</string>
    <string name="password">Password</string>
    <string name="forgetPassword">Forgot password</string>
    <!--MyTasks-->
    <string name="my_tasks_no">There are no tasks here yet!</string>
    <string name="delete_task">You have deleted the task! The points that you paid for the task have been returned to you.</string>
    <!--Notification-->
    <string name="notifications">Notifications</string>
    <string name="my_notifications">You have no notifications yet!</string>
    <!--Registration-->
    <string name="name">Name</string>
    <string name="describeString">Description</string>
    <string name="subject">Your specialization</string>
    <string name="next_register">Next→</string>
    <string name="data">Birthday</string>
    <string name="telephone">Phone number</string>
    <string name="registration_load">Loading...</string>
    <string name="registr_not">Registration failed! You must enter all the information.</string>
    <!--Slide1-->
    <string name="welcome">Welcome!</string>
    <string name="lets_do_it">Let me tell you more about our application</string>
    <!--Slide2-->
    <string name="points_and_rating">Points and rating</string>
    <string name="after_this_tut">At the end of the tutorial you will be given 500 points<br />→To get points, complete tasks<br />→To post the task you need to spend them<br />→For completing tasks, the expert is given a grade that affects the rating 🔥</string>
    <!--Slide3-->
    <string name="how_it_works">How does the app work?</string>
    <string name="lets_explain">Publish the task 📝<br /> →Your points are being deducted 💸<br />→ Experts submit applications 👨‍🎓<br />→ Choose an expert 🔍<br />→ An expert helps you🤝<br />→ The expert receives points 💎<br />→ Write a review about the work 📃</string>
    <!--Slide4-->
    <string name="finish_task_slide4">Completing the quest</string>
    <string name="to_finish">To finish the task, click the "Finish task" button. Then wait for the second person to press this button and the task will be completely completed 🧠</string>
    <!--Slide5-->
    <string name="congratulations_u_finish_tut">Congratulations, now we can definitely study together 🥳</string>
    <!--HowMuchTasksWereDone-->
    <string name="cool_that_u_with_us">Surprisingly, you have already completed the whole: </string>
    <string name="concratulations_with_high_lvl">Congratulations on leveling up!</string>
    <!--InternetConection-->
    <string name="conection_internet">Connect to the Internet</string>
    <string name="check_intenrt_con">Check your network connection.</string>
    <string name="settings">Settings</string>
    <string name="exit_from_app_internet">Exit</string>
    <!--Item-->
    <string name="subject_item">Subject:</string>
    <string name="grade_item">Grade:</string>
    <string name="do_it">Solve</string>
    <string name="what_about">Task</string>
    <string name="task_sent">Your application has been sent!</string>
    <!--ItemChats-->
    <string name="grade_chats">grade</string>
    <!--ItemNotification-->
    <string name="are_you_agree">Are you agree?</string>
    <string name="wants_to_do_u_task">wants to solve your task:</string>
    <!--ItemComment-->
    <string name="name_comm">Name:</string>
    <string name="rating">Mark:</string>

    <!--LoginOrSignUp-->
    <string name="enter">Enter</string>
    <string name="register">Register</string>
    <string name="loading">Load...</string>


    <string-array name="subjects">

        <item>Algebra</item>
        <item>English</item>
        <item>Biology</item>
        <item>Geography</item>
        <item>Geometry</item>
        <item>IT</item>
        <item>Art</item>
        <item>History</item>
        <item>Literature</item>
        <item>German</item>
        <item>life safety fundamentals</item>
        <item>Social science</item>
        <item>French</item>
        <item>Physics</item>
        <item>PE</item>
        <item>Chemistry</item>


    </string-array>


</resources>